fix disk tab item overflow

--- a/resources/installer/css/part.css
+++ b/resources/installer/css/part.css
@@ -147,6 +147,7 @@
     height:21px;
     line-height:21px;
     margin-right:8px;
+    overflow:hidden;
     background:rgba(255,255,255,0.2);
     border-top:1px solid rgba(0,0,0,0.3);
     border-left:1px solid rgba(0,0,0,0.3);
